Fix Spacing Issue for Post List
Remove extraneous padding from the wrapper DOM element.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,8 +160,6 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
